remove not needed spaces in nullable annotations