@@ -5,7 +5,7 @@ import java.util.List;
 @SuppressWarnings("ALL")
 public class DestructuringAssignmentListTestData {
     public void enter(Data data, List<Data> list) {
-        val ignored1 = list.get(0);
+        val ignored1 = list.getFirst();
 
         val (first, second, third, fourth) = list[3];
 
@@ -18,7 +18,7 @@ public class DestructuringAssignmentListTestData {
         var (deepGetter1, deepGetter2) = data.data.list[1];
         deepGetter2 = data;
 
-        val wrongParent1 = data.list.get(0);
+        val wrongParent1 = data.list.getFirst();
         val wrongParent2 = data.data.list[1];
 
         blackhole(first, second, third, fourth, ignored21, ignored22, getter1, getter2, deepGetter1, deepGetter2, wrongParent1, wrongParent2);
